OBR: New copy, anchor and anchor spacing fix.

--- a/obr.htm
+++ b/obr.htm
@@ -116,17 +116,29 @@
 	</section>
 
 	<!-- Form Intro -->
-	<section class="px-8 py-16 text-center sm:grid sm:place-content-center" style="background-color: #F5F5F5;">
+	<section class="px-8 py-16 text-center sm:grid sm:place-content-center"
+		style="background-color: #F5F5F5; padding-top:4rem; margin-top:0" id="apply">
 		<div class="max-w-2xl space-y-4">
 			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">
 				Get started with On-Bill Repayment
 			</h2>
 			<p class="text-balance">
-				To get started, select your co-op and complete the form below. Once you've submitted the form, you'll
-				receive
-				communications primarily from the Collective Clean Energy Fund and Zero Homes. Be sure to check your
-				email regularly,
-				including your spam and junk folders, for important updates and details on next steps.
+				The On-Bill Repayment Program makes energy efficiency and electrification upgrades more accessible for
+				homeowners,
+				business owners, schools, and agricultural producers by connecting them to rebates, financing,
+				education, qualified
+				contractors, equipment, and energy audits. Our goal is to empower communities to reduce emissions and
+				lower energy
+				costs.
+
+
+			</p>
+			<p class="text-balance">
+				To get started, select your co-op and complete the form below. After submission, you'll receive
+				communications
+				primarily from the Collective Clean Energy Fund and Zero Homes—be sure to check your email, including
+				spam and junk
+				folders, for important updates and next steps.
 
 			</p>
 			<p>Have questions? Call <span class="inline-block">720-263-2313</span></p>
