--- a/quality-install.htm
+++ b/quality-install.htm
@@ -16,31 +16,29 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
-	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
 
+	<!-- Global Styles -->
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_-UFRzSpfx2tStwj5bYydlkhBR3LXL-MLhjJ2dqKU_nw.css" />
 	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_standards-c73c2df017737ccf23698c0b0736a119.css?sgj5sc" />
-	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_general_refresh-5c80b35943a0af0412d9654ed4cf5056.css?sk35jq" />
-	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/general_rules-4adfb9f0efdb9fa703808293512b156d.css?sk35jq" />
+		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/block_ts_content-785a359dd81cb85e1c6dbeea859bb4d3.css?sk35jq" />
 	<!-- <link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/es_2023-51ee272218bb025fbad9040e249afa66.css?sk35jq" /> -->
-
-
-
+			href="https://tristate.coop/sites/default/files/asset_injector/css/es_2023-51ee272218bb025fbad9040e249afa66.css?sk35jq" /> -->
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/general_rules-4adfb9f0efdb9fa703808293512b156d.css?sk35jq" />
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_standards-c73c2df017737ccf23698c0b0736a119.css?sgj5sc" />
+	<link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_9_3_2-8fbdf4ce96211052d13dbe3c35baf3a9.css?sk35jq" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_esg-32bb8660ccea9c5807144db1517747a2.css?sk35jq" />
 	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_9_3_2-8fbdf4ce96211052d13dbe3c35baf3a9.css?sk35jq" />
-
-
+		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_general_refresh-5c80b35943a0af0412d9654ed4cf5056.css?sk35jq" />
 	<link rel="stylesheet" href="assets/css/build.css" />
+
+
 	<style>
 		.block-region-content p {
 			font-size: 16px;
@@ -66,15 +64,11 @@
 				<div
 					class="box-border flex-grow flex-shrink text-center min-h-60 max-w-[70%] px-8 py-12 md:py-16 md:text-balance">
 					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the QI program through
-						one
-						of
-						the
-						options below</h2>
+						one of the options below</h2>
 
 					<p>If accepted, you agree to be listed on Tristate.coop, LoveElectric.org and/or participating
-						member
-						websites.
-						You also agree to annual program updates and future requirements to maintain program approval.
+						member websites. You also agree to annual program updates and future requirements to maintain
+						program approval.
 					</p>
 
 					<div class="grid gap-8 mt-8">
@@ -85,10 +79,7 @@
 							</div>
 							<p>
 								Take an approved air source heat pump course from a manufacturer or training provider
-								and
-								email
-								to
-								<a href="mailto:peter.rusin@tristategt.org">peter.rusin@tristategt.org</a>
+								and email to <a href="mailto:peter.rusin@tristategt.org">peter.rusin@tristategt.org</a>
 							</p>
 						</div>
 						<div class="grid gap-y-4 content-start">
