--- a/quality-install.htm
+++ b/quality-install.htm
@@ -82,14 +82,14 @@
 						<h1 class="text-base font-bold"
 							style="font-family: 'Sarabun','Helvetica Neue',Helvetica,Arial,sans-serif">
 							HVAC and Heat Pump Technicians</h1>
-						<a class="text-base text-center bg-green text-white px-5 font-normal mx-auto rounded-full no-underline inline-block text-inherit leading-10"
+						<a class="text-base text-center bg-green text-white px-5 font-normal mx-auto rounded-full no-underline inline-block text-inherit leading-10 focus:text-white"
 							data-qi-selector="hvac" href="#">Begin Here</a>
 					</div>
 					<div>
 						<h1 class="text-base font-bold"
 							style="font-family: 'Sarabun','Helvetica Neue',Helvetica,Arial,sans-serif">
 							Plumbers and Heat Pump Water Heater Technicians</h1>
-						<a class="text-base text-center bg-green text-white px-5 font-normal mx-auto rounded-full no-underline inline-block text-inherit leading-10"
+						<a class="text-base text-center bg-green text-white px-5 font-normal mx-auto rounded-full no-underline inline-block text-inherit leading-10 focus:text-white"
 							data-qi-selector="plumber" href="#">Begin Here</a>
 					</div>
 				</div>
@@ -103,14 +103,10 @@
 					</h2>
 					<p>
 						The Tri-State Quality Install Program for HVAC provides a $350 to $450 contractor spiff per
-						install. The
-						program focuses on equipment selection and solutions for 5F and includes static pressure and air
-						flow
-						testing for ducted systems. Qualifying customer systems must be a member of and receive electric
-						service
-						from one of Tri-State G&amp;T’s participating cooperatives or public power district. Find a list
-						of our
-						member systems here.
+						install. The program focuses on equipment selection and solutions for 5F and includes static
+						pressure and air flow testing for ducted systems. Qualifying customer systems must be a member
+						of and receive electric service from one of Tri-State G&amp;T’s participating cooperatives or
+						public power district. Find a list of our member systems here.
 					</p>
 				</div>
 			</section>
@@ -192,10 +188,7 @@
 				data-plumber>
 				<div class="connections-content">
 					<h2 class="headline-2  headline-light ts-heading-2 ts-text-center">Apply to the QI program through
-						one
-						of
-						the
-						options below</h2>
+						one of the options below</h2>
 
 					<p>If accepted, you agree to be listed on Tristate.coop, LoveElectric.org and/or participating
 						member
@@ -225,7 +218,7 @@
 						<div class="grid gap-y-4 content-start">
 							<div
 								class="grid place-content-center mx-auto border border-solid aspect-square rounded-full size-16 text-4xl">
-								<span style="margin-top: -20%;">2</span>
+								<span style="margin-top: -20%;">3</span>
 							</div>
 							<p>
 								A representative from Tri-State will contact you within 5 business days on your Quality
@@ -310,8 +303,34 @@
 		</div><!-- .block-region-content -->
 
 
+		<section class="ts-grid-column ts-grid-row ts-grid-row-reverse hidden" data-hvac="">
+			<div class="grid p-12 place-content-center px-12 text-4xl text-white ts-grid-column ts-grid-column-img"
+				style="background:#757575"><img alt="Photo of equipment outdoors" class="video-thumb"
+					src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
+				<div class="relative font-serif font-bold">Incentives for heat pump water heaters</div>
+			</div>
+
+			<div class="ts-background-green ts-grid-column ts-grid-column-copy">
+				<div class="ts-grid-column-copy space-y-4">
+					<h2 class="headline-light ts-heading-2" style="margin-bottom:0">Submit each install for cash back
+					</h2>
+					<p>Approved QI contractors must
+						download and complete the form below to receive incentives. You will need to submit at
+						least one form per install location. Email forms to participating utility members or the
+						Tri-State rebate portal. You will receive $350 or $450 upon approval. Looking to save your
+						customers money on their equipment? Tri-State and our members offer rebates that can be combined
+						with state and federal rebates.</p>
+
+					<p><a class="button button-transparent"
+							href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+							target="_blank">Install
+							Incentive
+							Form</a></p>
+				</div>
+			</div>
+		</section>
 		<section class="ts-grid-column ts-grid-row ts-grid-row-reverse hidden" data-plumber="">
-			<div class="grid p-12 place-content-center px-12 text-3xl text-4xl text-white ts-grid-column ts-grid-column-img"
+			<div class="grid p-12 place-content-center px-12 text-4xl text-white ts-grid-column ts-grid-column-img"
 				style="background:#757575"><img alt="Photo of equipment outdoors" class="video-thumb"
 					src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
 				<div class="relative font-serif font-bold">Incentives for heat pump water heaters</div>
@@ -323,17 +342,14 @@
 					</h2>
 
 					<p>Approved QI contractors must download and complete the form below to receive incentives. You will
-						need to
-						submit at least one form per install location. Email forms to participating utility members or
-						the
-						Tri-State rebate portal. You will receive $200 per Heat Pump Water Heater installation. Looking
-						to save your
-						customers
-						money on their equipment? Tri-State and our members offer rebates that can be combined with
-						state and
-						federal rebates.</p>
+						need to submit at least one form per install location. Email forms to participating utility
+						members or the Tri-State rebate portal. You will receive $200 per Heat Pump Water Heater
+						installation. Looking to save your customers money on their equipment? Tri-State and our members
+						offer rebates that can be combined with state and federal rebates.</p>
 
-					<p><a class="button button-transparent" href="https://tristate.coop/programs#trade-ally">Install
+					<p><a class="button button-transparent"
+							href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+							target="_blank">Install
 							Incentive
 							Form</a></p>
 				</div>
