QI: Content update, sections were outside wrapper.

--- a/quality-install.htm
+++ b/quality-install.htm
@@ -106,7 +106,7 @@
 						install. The program focuses on equipment selection and solutions for 5F and includes static
 						pressure and air flow testing for ducted systems. Qualifying customer systems must be a member
 						of and receive electric service from one of Tri-State G&amp;T’s participating cooperatives or
-						public power district. Find a list of our member systems here.
+						public power district. Find a list of our <a href="/member-list">member systems here</a>.
 					</p>
 				</div>
 			</section>
@@ -118,6 +118,10 @@
 						(QI) trade ally with
 						Tri-State.
 					</h2>
+					<p>Qualifying customer systems must be a member of and receive electric service from one of
+						Tri-State G&T’s participating
+						cooperatives or public power district. Find a list of our <a href="/member-list">member systems
+							here</a>.</p>
 
 				</div>
 			</section>
@@ -300,62 +304,67 @@
 					</div>
 				</div>
 			</section>
+
+
+
+			<section class="ts-grid-column ts-grid-row ts-grid-row-reverse hidden" data-hvac="">
+				<div class="grid p-12 place-content-center px-12 text-4xl text-white ts-grid-column ts-grid-column-img"
+					style="background:#757575"><img alt="Photo of equipment outdoors" class="video-thumb"
+						src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
+					<div class="relative font-serif font-bold">Incentives for heat pump water heaters</div>
+				</div>
+
+				<div class="ts-background-green ts-grid-column ts-grid-column-copy">
+					<div class="ts-grid-column-copy space-y-4">
+						<h2 class="headline-light ts-heading-2" style="margin-bottom:0">Submit each install for cash
+							back
+						</h2>
+						<p>Approved QI contractors must
+							download and complete the form below to receive incentives. You will need to submit at
+							least one form per install location. Email forms to participating utility members or the
+							Tri-State rebate portal. You will receive $350 or $450 upon approval. Looking to save your
+							customers money on their equipment? Tri-State and our members offer rebates that can be
+							combined
+							with state and federal rebates.</p>
+
+						<p><a class="button button-transparent"
+								href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+								target="_blank">Install
+								Incentive
+								Form</a></p>
+					</div>
+				</div>
+			</section>
+			<section class="ts-grid-column ts-grid-row ts-grid-row-reverse hidden" data-plumber="">
+				<div class="grid p-12 place-content-center px-12 text-4xl text-white ts-grid-column ts-grid-column-img"
+					style="background:#757575"><img alt="Photo of equipment outdoors" class="video-thumb"
+						src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
+					<div class="relative font-serif font-bold">Incentives for heat pump water heaters</div>
+				</div>
+
+				<div class="ts-background-green ts-grid-column ts-grid-column-copy">
+					<div class="ts-grid-column-copy space-y-4">
+						<h2 class="headline-light ts-heading-2" style="margin-bottom:0">Submit each install for cash
+							back
+						</h2>
+
+						<p>Approved QI contractors must download and complete the form below to receive incentives. You
+							will
+							need to submit at least one form per install location. Email forms to participating utility
+							members or the Tri-State rebate portal. You will receive $200 per Heat Pump Water Heater
+							installation. Looking to save your customers money on their equipment? Tri-State and our
+							members
+							offer rebates that can be combined with state and federal rebates.</p>
+
+						<p><a class="button button-transparent"
+								href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+								target="_blank">Install
+								Incentive
+								Form</a></p>
+					</div>
+				</div>
+			</section>
 		</div><!-- .block-region-content -->
-
-
-		<section class="ts-grid-column ts-grid-row ts-grid-row-reverse hidden" data-hvac="">
-			<div class="grid p-12 place-content-center px-12 text-4xl text-white ts-grid-column ts-grid-column-img"
-				style="background:#757575"><img alt="Photo of equipment outdoors" class="video-thumb"
-					src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
-				<div class="relative font-serif font-bold">Incentives for heat pump water heaters</div>
-			</div>
-
-			<div class="ts-background-green ts-grid-column ts-grid-column-copy">
-				<div class="ts-grid-column-copy space-y-4">
-					<h2 class="headline-light ts-heading-2" style="margin-bottom:0">Submit each install for cash back
-					</h2>
-					<p>Approved QI contractors must
-						download and complete the form below to receive incentives. You will need to submit at
-						least one form per install location. Email forms to participating utility members or the
-						Tri-State rebate portal. You will receive $350 or $450 upon approval. Looking to save your
-						customers money on their equipment? Tri-State and our members offer rebates that can be combined
-						with state and federal rebates.</p>
-
-					<p><a class="button button-transparent"
-							href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
-							target="_blank">Install
-							Incentive
-							Form</a></p>
-				</div>
-			</div>
-		</section>
-		<section class="ts-grid-column ts-grid-row ts-grid-row-reverse hidden" data-plumber="">
-			<div class="grid p-12 place-content-center px-12 text-4xl text-white ts-grid-column ts-grid-column-img"
-				style="background:#757575"><img alt="Photo of equipment outdoors" class="video-thumb"
-					src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
-				<div class="relative font-serif font-bold">Incentives for heat pump water heaters</div>
-			</div>
-
-			<div class="ts-background-green ts-grid-column ts-grid-column-copy">
-				<div class="ts-grid-column-copy space-y-4">
-					<h2 class="headline-light ts-heading-2" style="margin-bottom:0">Submit each install for cash back
-					</h2>
-
-					<p>Approved QI contractors must download and complete the form below to receive incentives. You will
-						need to submit at least one form per install location. Email forms to participating utility
-						members or the Tri-State rebate portal. You will receive $200 per Heat Pump Water Heater
-						installation. Looking to save your customers money on their equipment? Tri-State and our members
-						offer rebates that can be combined with state and federal rebates.</p>
-
-					<p><a class="button button-transparent"
-							href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
-							target="_blank">Install
-							Incentive
-							Form</a></p>
-				</div>
-			</div>
-		</section>
-
 	</main>
 
 
